<resources>
    <string name="app_name">Weather </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="yes">yes</string>
    <string name="cancel">cancel</string>
    <string name="visibility">Visibility</string>
    <string name="ultra_violet">Ultra_violet</string>
    <string name="clouds">Clouds</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_alarm">Alarm</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_favourite">Favourite</string>
    <string name="fragment_map">Map</string>
    <string name="fragmentfavitemview">FragmentFavItemView</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="weather_alarm">weather Alarm</string>
    <string name="features">features\n</string>
    <string name="ok">ok</string>

</resources>