<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherapp.home.view.homeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/alarmFragment2"
        android:name="com.example.weatherapp.alert.AlarmFragment"
        android:label="@string/fragment_alarm"
        tools:layout="@layout/fragment_alarm" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherapp.setting.SettingsFragment"
        android:label="@string/fragment_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment2"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.weatherapp.fav.FavouriteFragment"
        android:label="@string/fragment_favourite"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_favouriteFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_favouriteFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_favouriteFragment_to_fragmentFavItemView"
            app:destination="@id/fragmentFavItemView" />

    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weatherapp.map.MapFragment"
        android:label="@string/fragment_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_mapFragment_to_favouriteFragment"
            app:destination="@id/favouriteFragment" />
        <action
            android:id="@+id/action_mapFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <argument
            android:name="destination"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fragmentFavItemView"
        android:name="com.example.weatherapp.fav.FragmentFavItemView"
        android:label="@string/fragmentfavitemview" />
</navigation>