<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back3"
        tools:context=".home.view.homeFragment">



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="317dp"
            android:layout_height="349dp"
            android:layout_marginTop="84dp"
            android:backgroundTint="#C6615273"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#615273"
            app:strokeWidth="2dp">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:progressTint="@color/primary"
                android:backgroundTint="@color/white"
                android:background="@color/white"
                android:visibility="gone"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cityTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="132dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="56dp"
                    android:src="@drawable/drawercloudicon"
                    app:layout_constraintTop_toBottomOf="@+id/cityTv"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/tempnumTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="TextView"
                    android:textSize="34sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/cityTv" />

                <TextView
                    android:id="@+id/statusTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="Status"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourRecycV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />


          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/weakRecycV"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:layout_marginTop="8dp"
              android:padding="10dp"
              app:layout_constraintEnd_toEndOf="@+id/hourRecycV"
              app:layout_constraintHorizontal_bias="0.35"
              app:layout_constraintStart_toStartOf="@+id/hourRecycV"
              app:layout_constraintTop_toBottomOf="@+id/hourRecycV" />

          <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_details_card"
              android:layout_width="317dp"
              android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
              android:backgroundTint="#C6615273"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weakRecycV"
            android:padding="6dp"
            android:layout_margin="6dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/icon_pressure"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/pressure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pressure_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/zero"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/icon_pressure"
                    app:layout_constraintStart_toStartOf="@+id/icon_pressure"
                    app:layout_constraintTop_toBottomOf="@+id/icon_pressure" />

                <TextView
                    android:id="@+id/txt_presure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/pressure"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/pressure_measure"
                    app:layout_constraintHorizontal_bias="0.518"
                    app:layout_constraintStart_toStartOf="@+id/pressure_measure"
                    app:layout_constraintTop_toBottomOf="@+id/pressure_measure" />

                <ImageView
                    android:id="@+id/icon_humidity"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:src="@drawable/humidity"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_cloud"
                    app:layout_constraintEnd_toEndOf="@+id/icon_ultraVio"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/icon_ultraVio"
                    app:layout_constraintTop_toTopOf="@+id/icon_cloud"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/humidity_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/zero"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/icon_humidity"
                    app:layout_constraintStart_toStartOf="@+id/icon_humidity"
                    app:layout_constraintTop_toBottomOf="@+id/icon_humidity" />

                <TextView
                    android:id="@+id/txt_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/humidity"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/humidity_measure"
                    app:layout_constraintHorizontal_bias="0.518"
                    app:layout_constraintStart_toStartOf="@+id/humidity_measure"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_measure" />

                <ImageView
                    android:id="@+id/icon_wind"
                    android:layout_width="800dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="34dp"
                    android:src="@drawable/wind"
                    app:layout_constraintEnd_toEndOf="@+id/icon_cloud"
                    app:layout_constraintStart_toStartOf="@+id/icon_cloud"
                    app:layout_constraintTop_toBottomOf="@+id/txt_cloud" />

                <TextView
                    android:id="@+id/wind_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/zero"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/icon_wind"
                    app:layout_constraintStart_toStartOf="@+id/icon_wind"
                    app:layout_constraintTop_toBottomOf="@+id/icon_wind" />

                <TextView
                    android:id="@+id/txt_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/wind"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/wind_measure"
                    app:layout_constraintHorizontal_bias="0.518"
                    app:layout_constraintStart_toStartOf="@+id/wind_measure"
                    app:layout_constraintTop_toBottomOf="@+id/wind_measure" />

                <ImageView
                    android:id="@+id/icon_cloud"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="184dp"
                    android:src="@drawable/clouds"
                    app:layout_constraintEnd_toEndOf="@+id/icon_pressure"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/icon_pressure"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cloud_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    android:layout_marginTop="6dp"
                    android:text="@string/zero"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/icon_cloud"
                    app:layout_constraintStart_toStartOf="@+id/icon_cloud"
                    app:layout_constraintTop_toBottomOf="@+id/icon_cloud" />

                <TextView
                    android:id="@+id/txt_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/clouds"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/cloud_measure"
                    app:layout_constraintHorizontal_bias="0.518"
                    app:layout_constraintStart_toStartOf="@+id/cloud_measure"
                    app:layout_constraintTop_toBottomOf="@+id/cloud_measure" />

                <ImageView
                    android:id="@+id/icon_ultraVio"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="96dp"
                    android:layout_marginEnd="17dp"
                    android:src="@drawable/ultra_violet"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_pressure"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_pressure"
                    app:layout_constraintTop_toTopOf="@+id/icon_pressure"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/ultraVio_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    android:layout_marginTop="6dp"
                    android:text="@string/zero"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/icon_ultraVio"
                    app:layout_constraintStart_toStartOf="@+id/icon_ultraVio"
                    app:layout_constraintTop_toBottomOf="@+id/icon_ultraVio" />

                <TextView
                    android:id="@+id/txt_ultraVio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/ultra_violet"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/ultraVio_measure"
                    app:layout_constraintHorizontal_bias="0.518"
                    app:layout_constraintStart_toStartOf="@+id/ultraVio_measure"
                    app:layout_constraintTop_toBottomOf="@+id/ultraVio_measure" />

                <ImageView
                    android:id="@+id/icon_visibility"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:src="@drawable/visibility"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_wind"
                    app:layout_constraintEnd_toEndOf="@+id/icon_ultraVio"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/icon_ultraVio"
                    app:layout_constraintTop_toTopOf="@+id/icon_wind"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/visibility_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    android:layout_marginTop="6dp"
                    android:text="@string/zero"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/icon_visibility"
                    app:layout_constraintStart_toStartOf="@+id/icon_visibility"
                    app:layout_constraintTop_toBottomOf="@+id/icon_visibility" />

                <TextView
                    android:id="@+id/txt_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/visibility"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/visibility_measure"
                    app:layout_constraintHorizontal_bias="0.475"
                    app:layout_constraintStart_toStartOf="@+id/visibility_measure"
                    app:layout_constraintTop_toBottomOf="@+id/visibility_measure"
                    app:layout_constraintVertical_bias="0.0" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="100dp"
              app:layout_constraintTop_toBottomOf="@+id/home_details_card"
              ></TextView>

      </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
